# git_prompt

./: Cargo.toml  Makefile  README.md
src/: bash.rs  git.rs  line.rs  main.rs  zsh.rs
