[package]
name = "git_prompt"
version = "1.1.1"
authors = ["Joker <nice.way@live.com>"]
description = "Git repository information inside a shell prompt."
repository = "https://github.com/Joker/git_prompt"
license = "MIT"
keywords = ["git", "prompt", "terminal", "zsh", "bash", "color"]
exclude = ["target", "Cargo.lock"]
edition = "2021"

[dependencies]
git2 = "0.16.1"

[profile.release]
strip = true
panic = "abort"
lto = true
